# Indigo

./: CMakeLists.txt  Doxyfile  README.md  ReleaseProfile.gdb  ToDo.txt
contrib/msvc/lib/: libogg.lib  libvorbis.lib  libvorbisfile.lib  openal.lib
data/Shaders/Lighting/: MeshLit.frag  MeshLit.vert
data/Shaders/MeshRenderer/: MeshRenderer.frag  MeshRenderer.vert
data/Shaders/Post-Process/: Quad.frag  Quad.vert
docs/html/: _a_a_b_b_8h_source.html  _application_8h_source.html  _camera_8h_source.html  _component_8h_source.html  _engine_8h_source.html  _game_object_8h_source.html  _input_8h_source.html  _mem_obj_8h_source.html  _mesh_8h_source.html  _mesh_renderer_8h_source.html  _mesh_resource_8h_source.html  _render_component_8h_source.html  _resources_8h_source.html  _shader_8h_source.html  _texture_8h_source.html  _texture_resource_8h_source.html  _transform_8h_source.html  annotated.html  class_indigo_1_1_a_a_b_b-members.html  class_indigo_1_1_a_a_b_b.html  class_indigo_1_1_application-members.html  class_indigo_1_1_application.html  class_indigo_1_1_camera-members.html  class_indigo_1_1_camera.html  class_indigo_1_1_component-members.html  class_indigo_1_1_component.html  class_indigo_1_1_engine-members.html  class_indigo_1_1_engine.html  class_indigo_1_1_game_object-members.html  class_indigo_1_1_game_object.html  class_indigo_1_1_input-members.html  class_indigo_1_1_input.html  class_indigo_1_1_mem_obj-members.html  class_indigo_1_1_mem_obj.html  class_indigo_1_1_mesh-members.html  class_indigo_1_1_mesh.html  class_indigo_1_1_mesh_renderer-members.html  class_indigo_1_1_mesh_renderer.html  class_indigo_1_1_mesh_resource-members.html  class_indigo_1_1_mesh_resource.html  (+32 more)
docs/html/search/: all_2.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  searchdata.js
docs/latex/: annotated.tex  class_indigo_1_1_a_a_b_b.tex  class_indigo_1_1_application.tex  class_indigo_1_1_camera.eps  class_indigo_1_1_camera.tex  class_indigo_1_1_component.eps  class_indigo_1_1_component.tex  class_indigo_1_1_engine.tex  class_indigo_1_1_game_object.eps  class_indigo_1_1_game_object.tex  class_indigo_1_1_input.tex  class_indigo_1_1_mem_obj.eps  class_indigo_1_1_mem_obj.tex  class_indigo_1_1_mesh.eps  class_indigo_1_1_mesh.tex  class_indigo_1_1_mesh_renderer.eps  class_indigo_1_1_mesh_renderer.tex  class_indigo_1_1_mesh_resource.eps  class_indigo_1_1_mesh_resource.tex  class_indigo_1_1_mesh_shader.eps  class_indigo_1_1_mesh_shader.tex  class_indigo_1_1_render_component.eps  class_indigo_1_1_render_component.tex  class_indigo_1_1_resource.eps  class_indigo_1_1_resource.tex  class_indigo_1_1_resources.tex  class_indigo_1_1_shader.eps  class_indigo_1_1_shader.tex  class_indigo_1_1_texture.eps  class_indigo_1_1_texture.tex  class_indigo_1_1_texture_resource.eps  class_indigo_1_1_texture_resource.tex  class_indigo_1_1_transform.eps  class_indigo_1_1_transform.tex  dir_5e7447c13a0b29e0a1fdcfa186a3e577.tex  hierarchy.tex  refman.tex  struct_indigo_1_1_message.tex  struct_indigo_1_1_message_reg.tex  structplankentry.tex
include/: indigo.h
include/indigo/: indigo.h
src/editor/: main.cpp
src/example/: config.h  main.cpp
src/indigo/: AABB.cpp  AABB.h  Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  CharacterController.cpp  CharacterController.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ContactResolver.cpp  ContactResolver.h  Engine.cpp  Engine.h  Environment.cpp  GameObj.cpp  GameObj.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  KeyHandler.cpp  KeyHandler.h  Light.cpp  Light.h  LightSources.cpp  LightSources.h  LinkedList.cpp  LinkedList.h  MemObj.cpp  MemObj.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  MeshResource.cpp  (+43 more)
src/indigo/AL_AUDIO/: AudioManager.cpp  AudioManager.h
tools/: create vs2012 sln.bat  create vs2015 sln.bat
